<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.Registration"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:text="@string/registration"/>

    <ProgressBar
        android:id="@+id/activity_registration__progress_bar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/activity_registration__email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="120dp"
        android:background="#FFAB91"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/activity_registration__password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:background="#FFAB91"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/activity_registration__button"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/register"
        android:textColor="@color/white"/>

</LinearLayout>