<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".authentication.ResetPassword">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:text="@string/forgot_password"/>

    <ProgressBar
        android:id="@+id/activity_reset_password__progress_bar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/activity_reset_password__email_of_user"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="120dp"
        android:background="#eeeeee"
        android:hint="@string/email"/>

    <Button
        android:id="@+id/activity_reset_password__button_to_reset_password"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/reset"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/activity_reset_password__button_to_get_back"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/get_back"
        android:textColor="@color/white"/>

</LinearLayout>